# autoconf

./: .cvsignore  .gitattributes  .gitignore  .prev-version  .x-sc_prohibit_atoi_atof  .x-sc_space_tab  .x-sc_sun_os_names  .x-sc_trailing_blank  .x-sc_trailing_space  .x-sc_two_space_separator_in_usage  .x-update-copyright  AUTHORS  BUGS  BuildCommon.pm  COPYING.EXCEPTION  ChangeLog  ChangeLog.0  ChangeLog.1  ChangeLog.2  ChangeLog.3  GNUmakefile  GNUmakefile.cfg  HACKING  INSTALL  Makefile.am  Makefile.cfg  Makefile.in  Makefile.maint  NEWS  README  README-alpha  README-cvs  README-hacking  THANKS  TODO  acconfig.h  acfunctions  acfunctions.m4  acgeneral.m4  acheaders  (+46 more)
build-aux/: .gitignore  config.guess  config.sub  elisp-comp  fetch.pl  fetch.sh  gendocs.sh  git-version-gen  help-extract.pl  mdate-sh  missing  test-build-guix  texinfo.tex  vc-list-files
config/: Makefile.am  Makefile.in  announce-gen  elisp-comp  install-sh  m4.m4  prev-version.txt  select.m4
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  autoconf.texi  install.texi  local.mk  make-stds.texi  standards.texi  texinfo.tex
lib/: Makefile.am  Makefile.in  autom4te.in  freeze.mk  local.mk  version.in
lib/Autom4te/: C4che.pm  ChannelDefs.pm  Channels.pm  Config.pm  Configure_ac.pm  FileUtils.pm  General.pm  Getopt.pm  Makefile.am  Makefile.in  Request.pm  Struct.pm  XFile.pm
lib/autoconf/: .cvsignore  Makefile.am  Makefile.in  a68.m4  autoconf.m4  autoheader.m4  autoscan.m4  autotest.m4  autoupdate.m4  c.m4  erlang.m4  fortran.m4  functions.m4  general.m4  go.m4  headers.m4  lang.m4  libs.m4  oldnames.m4  programs.m4  specific.m4  status.m4  types.m4
lib/autoscan/: Makefile.am  Makefile.in  autoscan.list  autoscan.pre  functions  headers  identifiers  makevars  programs
lib/autotest/: Makefile.am  Makefile.in  autotest.m4  general.m4  specific.m4
lib/emacs/: .cvsignore  Makefile.am  Makefile.in  autoconf-mode.el  autotest-mode.el
lib/m4sugar/: .cvsignore  Makefile.am  Makefile.in  foreach.m4  m4sh.m4  m4sugar.m4  version.in
m4/: Makefile.am  Makefile.in  atconfig.m4  init.m4  m4.m4  make-case.m4  missing.m4  perl-time-hires.m4  sanity.m4
man/: .gitignore  Makefile.am  Makefile.in  autoconf.1  autoconf.w  autoheader.1  autoheader.w  autom4te.1  autom4te.w  autoreconf.1  autoreconf.w  autoscan.1  autoscan.w  autoscan.x  autoupdate.1  autoupdate.w  autoupdate.x  common.w  common.x  config.guess.1  config.guess.x  config.sub.1  config.sub.x  ifnames.1  ifnames.w  local.mk
tests/: .cvsignore  .gitignore  Makefile.am  Makefile.in  README  a68.at  acautoheader.at  acautoupdate.at  acc.at  acfortran.at  acfunctions.at  acgeneral.at  acheaders.at  aclang.at  aclibs.at  aclocal.m4  acprograms.at  acspecific.at  acstatus.at  actest.m4  actypes.at  atconfig.in  atgeneral.m4  atlocal.in  atspecific.m4  autoconf  autoheader  autom4te  autom4te.in  autoreconf  autoreconf.in  autoscan.at  autotest.at  autoupdate  autoupdate.in  base.at  base.m4  c.at  compile.at  erlang.at  (+29 more)
tests/data/: ax_prog_cc_for_build_v18.m4  gnulib_std_gnu11_2020_08_17.m4
testsuite/: Makefile.am  Makefile.in
testsuite/autoconf.s/: defines.exp  syntax.exp
testsuite/config/: unix.exp
testsuite/lib/: common.exp
